cmake_minimum_required(VERSION 3.13)
project(yaz_cmd_cpp)
#set (YAZCONFIG '/usr/local/bin/yaz-config')
#set(CFLAGS ${YAZCONFIG} --cflags)
#set(YAZLIBS ${YAZCONFIG} --libs)
#INCLUDE_DIRECTORIES(libs/yaz-5.27.1/include)
#LINK_DIRECTORIES(libs/yaz-5.27.1/src)
INCLUDE_DIRECTORIES(/usr/local/include)
LINK_DIRECTORIES(/usr/local/lib)
set(CMAKE_CXX_STANDARD 14)

add_executable(yaz_cmd_cpp main.cpp)
#target_link_libraries(yaz_cmd_cpp libyaz)
TARGET_LINK_LIBRARIES(yaz_cmd_cpp yaz yazpp zoompp)
